# apps/api/src/core/settlements/settlements.module.ts
@@ -1,0 +1,13 @@
+import { Module } from '@nestjs/common';
+import { ConfigModule } from '@nestjs/config';
+import { SupabaseModule } from '../../utils/supabase/supabase.module';
+import { SettlementsController } from './settlements.controller';
+import { SettlementsService } from './settlements.service';
+
+@Module({
+  imports: [ConfigModule, SupabaseModule],
+  controllers: [SettlementsController],
+  providers: [SettlementsService],
+  exports: [SettlementsService],
+})
+export class SettlementsModule {}
